--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-DATABASE_URL="postgresql://postgres:root@localhost:5432/safoyana?schema=public"
+# DATABASE_URL="postgresql://postgres:root@localhost:5432/safoyana?schema=public"
+DATABASE_URL="postgresql://postgres:1212@localhost:5432/safoyana?schema=public"
 SALT_ROUNDS=10
 JWT_SECRET="supersecretkey"
